--- a/package.xml
+++ b/package.xml
@@ -64,7 +64,9 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <build_depend>message_runtime</build_depend>
-
+  <build_depend>visualization_msgs</build_depend>
+  <build_export_depend>visualization_msgs</build_export_depend>
+  <exec_depend>visualization_msgs</exec_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
